--- a/GitHub/GitHubActions/DeployToAWSS3.yml
+++ b/GitHub/GitHubActions/DeployToAWSS3.yml
@@ -1,38 +1,38 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Deploy to AWS S3
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - release/**
+
+env:
+  project-name: Photorunctin-Eye
 
 jobs:
   deploy:
-    name: Deploy
-
+    name: Build & Deploy
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Setup Python 3.7 for awscli
-      uses: actions/setup-python@v1
-      with:
-        version: '3.7'
-        architecture: 'x64'
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
 
-    - name: Install awscli
-      run: pip install --upgrade pip awscli
+      - name: Package Install
+        run: npm install
 
-    - name: Generare Static Site by Nuxt.js
-      run: |
-        npm install
-        npm run generate
+      - name: Build
+        run: npm run generate
 
-    - name: Copy to s3
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: aws s3 cp ./dist s3://photoruction-eye --recursive --acl public-read
+      - name: Publish to AWS S3 & CloudFront Cache Clear
+        uses: opspresso/action-s3-sync@v0.2.3
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: 'ap-northeast-1'
+          FROM_PATH: './dist'
+          DEST_PATH: 's3://photoruction-eye/'
