--- a/GitHub/GitHubActions/DeployToAWSS3.yml
+++ b/GitHub/GitHubActions/DeployToAWSS3.yml
@@ -29,10 +29,11 @@ jobs:
         run: npm run generate
 
       - name: Publish to AWS S3 & CloudFront Cache Clear
-        uses: opspresso/action-s3-sync@v0.2.3
+        uses: opspresso/action-s3-sync@master
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'ap-northeast-1'
           FROM_PATH: './dist'
           DEST_PATH: 's3://photoruction-eye/'
+          OPTIONS: "--acl public-read --delete"
